fixing scrollbar bug in header

--- a/css/default.css
+++ b/css/default.css
@@ -63,6 +63,7 @@ main {
         font-size: 1em;
         font-weight: 300; }
     #workspace-header #header-left .view-selector {
+      display: block;
       font-size: 1.05em;
       color: #434c43;
       padding: 0.4em;
