--- a/css/prototype.scss
+++ b/css/prototype.scss
@@ -92,6 +92,7 @@ main {
         }
 
         .view-selector {
+            display: block;
             font-size: 1.05em;
             color: #434c43;
             padding: 0.4em;
